# rapidsell

./: .gitignore  README.md
app/: .env  .eslintrc  README.md  capacitor.config.ts  package-lock.json  package.json
app/ios/App/App/: Info.plist
app/ios/App/App.xcodeproj/: project.pbxproj
app/src/: App.vue  main.ts  style.css
app/src/components/: Menu.vue  MenuComponent.vue
app/src/router/: index.ts
app/src/stores/: index.ts  user.ts
backend/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tox.ini
backend/.chalice/: config.json  config.json.tpl
backend/.chalice/deployed/: dev.json
backend/chalicelib/: __init__.py
backend/chalicelib/_dynamo/: __init__.py  scanning.py
backend/chalicelib/_scraping/: __init__.py
backend/chalicelib/_scraping/scanning/: __init__.py  lens.py
backend/chalicelib/events/scanning/: image_created.py
backend/chalicelib/routes/scanning/: __init__.py  _img_redirect.py  _list_scans.py  img_redirect.py  presign.py  route.py
backend/chalicelib/routes/users/: __init__.py  _log_out.py  _sign_in.py  confirm_signup.py  log_out.py  route.py  sign_in.py  signin.py  signup.py
terraform/: README.md  README.txt  main.tf  output.tf  terraform.tfvars  variables.tf
terraform/modules/app/: main.tf  variables.tf
terraform/modules/backend/: main.tf  output.tf  variables.tf
terraform/modules/core/: main.tf  variables.tf
terraform/modules/domain/: README.txt  main.tf  output.tf  variables.tf
terraform/modules/scanning/: main.tf  output.tf
terraform/modules/users/: main.tf  output.tf
(+58 files in other folders)
