[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jack Rothrock <jrothrock14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chalice = "^1.29.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
pydocstyle = "^6.1"
pytest = "^6.2"
toml = "^0.10"
pytest-env = "^0.6.2"
mypy = "^0.950"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
exclude = ".venv"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_site_packages = true
explicit_package_bases = true
namespace_packages = true
exclude = [
  "application/*"
]

[tool.isort]
profile = "black"
skip_glob = [".venv/*"]
quiet = true
force_single_line = true

[tool.pydocstyle]
match-dir='[^\.venv].*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
